test_files/netlist_connected/invalid/invalid_03_line_1.net
V1 N001 0 5
.tran 1m
.backanno
.end
